--- a/Contenitori/MainWindow.xaml
+++ b/Contenitori/MainWindow.xaml
@@ -52,9 +52,13 @@
             <Label Content="Raggio :" HorizontalAlignment="Left" FontSize="15"/>
             <TextBox Height="30" Width="150"/>
         </StackPanel>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.RowSpan="2" Grid.Row="4" Grid.Column="1">
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.RowSpan="2" Grid.Row="4" Grid.Column="0">
             <Button Content="Aggiungi Figura" Height="30" Width="150"/>
-            <ComboBox Height="30" Width="150" Margin="0,15,0,0"/>
+            <TextBox Height="30" Width="150" Margin="0,5,0,0"/>
+            <Button Content="Applica" Height="30" Width="150" Margin="0,5,0,0"/>
+        </StackPanel>
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Row="4" Grid.Column="1">
+            
         </StackPanel>
     </Grid>
 </Window>
