--- a/Contenitori/MainWindow.xaml
+++ b/Contenitori/MainWindow.xaml
@@ -58,7 +58,7 @@
             <Button Content="Applica" Height="30" Width="150" Margin="0,5,0,0"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Row="4" Grid.Column="1">
-            
+            <ListBox Width="480" Height="130"></ListBox>
         </StackPanel>
     </Grid>
 </Window>
